--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bullmq": "^4.11.2",
+    "ioredis": "^5.3.2",
     "lowdb": "^6.0.1",
     "puppeteer": "^21.3.1"
   }
