--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bullmq": "^4.11.2",
     "ioredis": "^5.3.2",
     "lowdb": "^6.0.1",
-    "puppeteer": "^21.3.1"
+    "puppeteer": "^21.3.1",
+    "redis": "^4.6.10"
   }
 }
