--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cliqz/adblocker-puppeteer": "^1.26.7",
     "bullmq": "^4.11.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "lowdb": "^6.0.1",
+    "p-queue": "^7.4.1",
+    "proxy-chain": "^2.3.0",
     "puppeteer": "^21.3.1",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "sentiment": "^5.0.2"
   }
 }
